De-oopsify translations

--- a/translations/game+intl-icu.en.xlf
+++ b/translations/game+intl-icu.en.xlf
@@ -101,6 +101,26 @@
         <target>{citizen} has {action} the town gates.</target>
       </segment>
     </unit>
+    <unit id="7F6V04y" name="geöffnet">
+      <notes>
+        <note category="german">geöffnet</note>
+        <note category="from">[unused]</note>
+      </notes>
+      <segment>
+        <source>geöffnet</source>
+        <target>opened</target>
+      </segment>
+    </unit>
+    <unit id="2nMdNJ8" name="geschlossen">
+      <notes>
+        <note category="german">geschlossen</note>
+        <note category="from">[unused]</note>
+      </notes>
+      <segment>
+        <source>geschlossen</source>
+        <target>closed</target>
+      </segment>
+    </unit>
     <unit id="sjK4T.p" name="Das Stadttor wurde automatisch {action}.">
       <notes>
         <note category="german">Das Stadttor wurde automatisch {action}.</note>
@@ -119,6 +139,26 @@
       <segment>
         <source>{citizen} hat die Stadt {action}.</source>
         <target>{citizen} has {action} the town.</target>
+      </segment>
+    </unit>
+    <unit id="RvCIvJN" name="betreten">
+      <notes>
+        <note category="german">ist in die Stadt zurückgekehrt</note>
+        <note category="from">[unused]</note>
+      </notes>
+      <segment>
+        <source>betreten</source>
+        <target>entered</target>
+      </segment>
+    </unit>
+    <unit id="N0kS6xp" name="verlassen">
+      <notes>
+        <note category="german">hat die Stadt verlassen..</note>
+        <note category="from">[unused]</note>
+      </notes>
+      <segment>
+        <source>verlassen</source>
+        <target>left</target>
       </segment>
     </unit>
     <unit id="7.iAHCv" name="Ein neuer Bürger ist in der Stadt angekommen: {citizen}.">
@@ -6856,6 +6896,17 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
         <target>The number of presents you have stolen from your friends.</target>
       </segment>
     </unit>
+    <unit id="Gf1_yUr" name="Tagelang wurde an den Seelen der Toten herumgepfuscht.">
+      <notes>
+        <note category="german">Tagelang wurde an den Seelen der Toten herumgepfuscht.</note>
+        <note category="state">new</note>
+        <note category="from">[unused]</note>
+      </notes>
+      <segment>
+        <source>Tagelang wurde an den Seelen der Toten herumgepfuscht.</source>
+        <target>Tagelang wurde an den Seelen der Toten herumgepfuscht.</target>
+      </segment>
+    </unit>
     <unit id="H3ZzhL.">
       <notes>
         <note category="german">Beim Durchsuchen der Ruine merkst du, dass es nichts mehr zu finden gibt. Leider...</note>
@@ -7265,6 +7316,16 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
       <segment>
         <source>Du hast furchtbare Kopfschmerzen... Keinesfalls kannst du heute weiteren Alkohol zu dir nehmen.</source>
         <target>You have a monster headache... There's no way you can stomach another drop of booze until tomorrow.</target>
+      </segment>
+    </unit>
+    <unit id="E6vRFnM" name="Endlich kannst du deine Schwiegermutter loswerden!">
+      <notes>
+        <note category="german">Endlich kannst du deine Schwiegermutter loswerden!</note>
+        <note category="from">[unused]</note>
+      </notes>
+      <segment>
+        <source>Endlich kannst du deine Schwiegermutter loswerden!</source>
+        <target>You can finally get rid of your mother-in-law!</target>
       </segment>
     </unit>
     <unit id="PMbiois">
