--- a/translations/global+intl-icu.en.xlf
+++ b/translations/global+intl-icu.en.xlf
@@ -3353,7 +3353,6 @@
       <notes>
         <note category="german">Umfragen können an dieser Stelle nicht angezeigt werden. Bitte besuche das Forum.</note>
         <note category="from">twig:///templates/ajax/forum/posts_small.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Umfragen können an dieser Stelle nicht angezeigt werden. Bitte besuche das Forum.</source>
@@ -3364,7 +3363,6 @@
       <notes>
         <note category="german">Diese Umfrage ist ungültig oder wurde gelöscht.</note>
         <note category="from">twig:///templates/ajax/forum/posts.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Diese Umfrage ist ungültig oder wurde gelöscht.</source>
@@ -3375,7 +3373,6 @@
       <notes>
         <note category="german">Abstimmen</note>
         <note category="from">twig:///templates/ajax/forum/posts.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Abstimmen</source>
@@ -3386,7 +3383,6 @@
       <notes>
         <note category="german">Ergebnisse anzeigen</note>
         <note category="from">twig:///templates/ajax/forum/posts.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Ergebnisse anzeigen</source>
@@ -3397,7 +3393,6 @@
       <notes>
         <note category="german">Wenn du die Ergebnisse abrufst kannst du danach nicht mehr abstimmen. Bist du sicher?</note>
         <note category="from">twig:///templates/ajax/forum/posts.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Wenn du die Ergebnisse abrufst kannst du danach nicht mehr abstimmen. Bist du sicher?</source>
@@ -3408,7 +3403,6 @@
       <notes>
         <note category="german">Umfrage einfügen</note>
         <note category="from">twig:///templates/ajax/forum/editor.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Umfrage einfügen</source>
@@ -3419,7 +3413,6 @@
       <notes>
         <note category="german">Kontrolliere deine Eingaben! Umfragen können nach dem Absenden des Posts nicht mehr bearbeitet werden!</note>
         <note category="from">twig:///templates/ajax/forum/editor.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Kontrolliere deine Eingaben! Umfragen können nach dem Absenden des Posts nicht mehr bearbeitet werden!</source>
@@ -3430,7 +3423,6 @@
       <notes>
         <note category="german">Fragetext eingeben (optional)</note>
         <note category="from">twig:///templates/ajax/forum/editor.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Fragetext eingeben (optional)</source>
@@ -3441,7 +3433,6 @@
       <notes>
         <note category="german">Antwort hinzufügen</note>
         <note category="from">twig:///templates/ajax/forum/editor.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Antwort hinzufügen</source>
@@ -3452,7 +3443,6 @@
       <notes>
         <note category="german">Antwort</note>
         <note category="from">twig:///templates/ajax/forum/editor.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Antwort</source>
@@ -3474,7 +3464,6 @@
       <notes>
         <note category="german">Info-Text hinzufügen</note>
         <note category="from">twig:///templates/ajax/forum/editor.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Info-Text hinzufügen</source>
@@ -3485,7 +3474,6 @@
       <notes>
         <note category="german">Info-Text</note>
         <note category="from">twig:///templates/ajax/forum/editor.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Info-Text</source>
@@ -3496,11 +3484,20 @@
       <notes>
         <note category="german">Du musst mindestens eine Antwort eingeben.</note>
         <note category="from">twig:///templates/ajax/forum/editor.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Du musst mindestens eine Antwort eingeben.</source>
         <target>You have to enter at least one answer.</target>
+      </segment>
+    </unit>
+    <unit id="OO3MLkJ" name="Spielernamen einfügen">
+      <notes>
+        <note category="german">Spielernamen einfügen</note>
+        <note category="from">twig:///templates/ajax/forum/editor.html.twig</note>
+      </notes>
+      <segment>
+        <source>Spielernamen einfügen</source>
+        <target>Insert player name</target>
       </segment>
     </unit>
   </file>
