--- a/translations/help+intl-icu.es.xlf
+++ b/translations/help+intl-icu.es.xlf
@@ -7545,7 +7545,7 @@ Alle Seelenpunkte, die mit einer gelöschten Stadt erspielt wurden, gehen ebenso
       </notes>
       <segment>
         <source>MyHordes bietet Entwicklern zusätzliche Informationen in Form von JSON- und XML-Feeds, die für die Erstellung zusätzlicher Anwendungen und anderer neuartiger Funktionen auf Basis des Spiels verwendet werden können.</source>
-        <target>MyHordes ofrece a los desarrolladores información adicional en forma de feeds JSON y XML que se pueden utilizar para la creación de aplicaciones adicionales y otros nuevos usos basados ​​en el juego.</target>
+        <target>MyHordes ofrece a los desarrolladores información adicional en forma de feeds JSON y XML que se pueden utilizar para la creación de aplicaciones adicionales y otros nuevos usos basados en el juego.</target>
       </segment>
     </unit>
     <unit id="ncia324">
