--- a/translations/game+intl-icu.en.xlf
+++ b/translations/game+intl-icu.en.xlf
@@ -104,7 +104,7 @@
     <unit id="7F6V04y" name="geöffnet">
       <notes>
         <note category="german">geöffnet</note>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/LogTemplateHandler.php</note>
       </notes>
       <segment>
         <source>geöffnet</source>
@@ -114,7 +114,7 @@
     <unit id="2nMdNJ8" name="geschlossen">
       <notes>
         <note category="german">geschlossen</note>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/LogTemplateHandler.php</note>
       </notes>
       <segment>
         <source>geschlossen</source>
@@ -144,7 +144,7 @@
     <unit id="RvCIvJN" name="betreten">
       <notes>
         <note category="german">ist in die Stadt zurückgekehrt</note>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/LogTemplateHandler.php</note>
       </notes>
       <segment>
         <source>betreten</source>
@@ -154,7 +154,7 @@
     <unit id="N0kS6xp" name="verlassen">
       <notes>
         <note category="german">hat die Stadt verlassen..</note>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/LogTemplateHandler.php</note>
       </notes>
       <segment>
         <source>verlassen</source>
@@ -1713,7 +1713,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
     <unit id="Z2xHG8j" name="Bank">
       <notes>
         <note category="german">Bank</note>
-        <note category="from">twig:///templates/ajax/game/newspaper.html.twig;twig:///templates/ajax/game/town/town.html.twig</note>
+        <note category="from">php:///src/Service/GameFactory.php;twig:///templates/ajax/game/newspaper.html.twig;twig:///templates/ajax/game/town/town.html.twig</note>
       </notes>
       <segment>
         <source>Bank</source>
@@ -1733,7 +1733,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
     <unit id="OlFB1V6" name="Konstruktionen">
       <notes>
         <note category="german">Konstruktionen</note>
-        <note category="from">twig:///templates/ajax/game/town/dashboard.html.twig;twig:///templates/ajax/game/town/town.html.twig</note>
+        <note category="from">php:///src/Service/GameFactory.php;twig:///templates/ajax/game/town/dashboard.html.twig;twig:///templates/ajax/game/town/town.html.twig</note>
       </notes>
       <segment>
         <source>Konstruktionen</source>
@@ -3671,7 +3671,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
     <unit id="266wx0d" name="Verbesserung des Tages">
       <notes>
         <note category="german">Verbesserung des Tages</note>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/GameFactory.php</note>
       </notes>
       <segment>
         <source>Verbesserung des Tages</source>
@@ -3691,7 +3691,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
     <unit id="gd8sEx3" name="Werkstatt">
       <notes>
         <note category="german">Werkstatt</note>
-        <note category="from">twig:///templates/ajax/game/newspaper.html.twig;twig:///templates/ajax/game/town/workshop.html.twig</note>
+        <note category="from">php:///src/Service/GameFactory.php;twig:///templates/ajax/game/newspaper.html.twig;twig:///templates/ajax/game/town/workshop.html.twig</note>
       </notes>
       <segment>
         <source>Werkstatt</source>
@@ -7381,7 +7381,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
     <unit id="0i49zPL" name="In diesem Thread dreht sich alles um die Bank.">
       <notes>
         <note category="german">In diesem Thread dreht sich alles um die Bank.</note>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/GameFactory.php</note>
       </notes>
       <segment>
         <source>In diesem Thread dreht sich alles um die Bank.</source>
@@ -7721,7 +7721,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
     <unit id="I8m37R7" name="In diesem Thread dreht sich alles um die geplanten Verbesserungen des Tages.">
       <notes>
         <note category="german">In diesem Thread dreht sich alles um die geplanten Verbesserungen des Tages.</note>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/GameFactory.php</note>
       </notes>
       <segment>
         <source>In diesem Thread dreht sich alles um die geplanten Verbesserungen des Tages.</source>
@@ -7731,7 +7731,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
     <unit id="1moRVN8" name="In diesem Thread dreht sich alles um die Werkstatt und um Ressourcen.">
       <notes>
         <note category="german">In diesem Thread dreht sich alles um die Werkstatt und um Ressourcen.</note>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/GameFactory.php</note>
       </notes>
       <segment>
         <source>In diesem Thread dreht sich alles um die Werkstatt und um Ressourcen.</source>
@@ -7741,7 +7741,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
     <unit id="R.vbGQY" name="In diesem Thread dreht sich alles um zukünftige Bauprojekte.">
       <notes>
         <note category="german">In diesem Thread dreht sich alles um zukünftige Bauprojekte.</note>
-        <note category="from">[unused]</note>
+        <note category="from">php:///src/Service/GameFactory.php</note>
       </notes>
       <segment>
         <source>In diesem Thread dreht sich alles um zukünftige Bauprojekte.</source>
@@ -17881,12 +17881,11 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
     <unit id="jq7dkW2">
       <notes>
         <note category="german">{citizen1} und {citizen2} wurden in letzter Minute gerettet, als sie sich gestern Abend bereit machten, sich in ihren Häusern &lt;strong&gt;zu erhängen&lt;/strong&gt;. Kommentar: "Ich dachte, sie würden mich bei lebendigem Leib auffressen, und das wollte ich nicht mehr erleben". Im Nachhinein betrachtet war es eine schlechte Entscheidung, da es gestern Abend &lt;strong&gt;keine Zombies&lt;/strong&gt; in die Stadt geschafft haben.</note>
-        <note category="state">new</note>
         <note category="from">db://GazetteEntryTemplate</note>
       </notes>
       <segment>
         <source>{citizen1} und {citizen2} wurden in letzter Minute gerettet, als sie sich gestern Abend bereit machten, sich in ihren Häusern &lt;strong&gt;zu erhängen&lt;/strong&gt;. Kommentar: "Ich dachte, sie würden mich bei lebendigem Leib auffressen, und das wollte ich nicht mehr erleben". Im Nachhinein betrachtet war es eine schlechte Entscheidung, da es gestern Abend &lt;strong&gt;keine Zombies&lt;/strong&gt; in die Stadt geschafft haben.</source>
-        <target><![CDATA[{citizen1} and {citizen2} were saved in the nick of time when getting ready to hang themselves in their home last night. They explained, "I thought they were going to eat me alive, and I didn't want to live to see that". In hindsight, it was a poor decision, as no zombies made it into town last night.]]></target>
+        <target>{citizen1} and {citizen2} were saved in the nick of time when getting ready to hang themselves in their home last night. They explained, "I thought they were going to eat me alive, and I didn't want to live to see that". In hindsight, it was a poor decision, as no zombies made it into town last night.</target>
       </segment>
     </unit>
     <unit id="tzTZCkX">
