--- a/translations/admin+intl-icu.en.xlf
+++ b/translations/admin+intl-icu.en.xlf
@@ -3839,5 +3839,71 @@
         <target>Mark as an event town</target>
       </segment>
     </unit>
+    <unit id="7npTNxR" name="Funktionen für Spezialrollen">
+      <notes>
+        <note category="german">Funktionen für Spezialrollen</note>
+        <note category="from">twig:///templates/ajax/admin/users/account.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Funktionen für Spezialrollen</source>
+        <target>Options for special roles</target>
+      </segment>
+    </unit>
+    <unit id="nG1VP4R" name="Stadt-ID eingeben.">
+      <notes>
+        <note category="german">Stadt-ID eingeben.</note>
+        <note category="from">twig:///templates/ajax/admin/users/account.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Stadt-ID eingeben.</source>
+        <target>Enter town ID</target>
+      </segment>
+    </unit>
+    <unit id="NIAMEKG" name="Zugang zu Stadtforum gewähren">
+      <notes>
+        <note category="german">Zugang zu Stadtforum gewähren</note>
+        <note category="from">twig:///templates/ajax/admin/users/account.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Zugang zu Stadtforum gewähren</source>
+        <target>Grant access to a town forum</target>
+      </segment>
+    </unit>
+    <unit id="3PvUorI" name="Zugang zu Stadtforum entziehen">
+      <notes>
+        <note category="german">Zugang zu Stadtforum entziehen</note>
+        <note category="from">twig:///templates/ajax/admin/users/account.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Zugang zu Stadtforum entziehen</source>
+        <target>Retract access to a town forum</target>
+      </segment>
+    </unit>
+    <unit id="K8iqUB2" name="Spezialrollen">
+      <notes>
+        <note category="german">Spezialrollen</note>
+        <note category="from">twig:///templates/ajax/admin/users/account.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Spezialrollen</source>
+        <target>Special roles</target>
+      </segment>
+    </unit>
+    <unit id="mupnQII" name="Animateur">
+      <notes>
+        <note category="german">Animateur</note>
+        <note category="from">twig:///templates/ajax/admin/users/account.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Animateur</source>
+        <target>AnimACTION team</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
